--- a/docs/css/utilities.css
+++ b/docs/css/utilities.css
@@ -8,7 +8,7 @@
 .container {
   max-width: var(--width-medium);
   margin: 0 auto;
-  padding: 1rem 2rem;
+  padding: 0 auto;
 }
 
 h1::selection,
@@ -21,20 +21,20 @@ h2::selection {
 .btn {
   display: inline-block;
   padding: 0.75rem 1.9rem;
-  border-radius: 30px;
+  border-radius: 24px;
   text-transform: uppercase;
-  font-size: 0.82rem;
+  font-size: 0.8rem;
   transition: 0.3s;
 }
 
 .btn-primary {
-  background: var(--primary-color);
-  color: #000000;
+  background: #ffcd42;
+  color: #fafafa;
 }
 
 .btn-secondary {
   margin: 5px 0;
-  background-color: var(--bg-secondary);
+  background-color: #ffcd42;
   color: var(--bg-primary);
 }
 
@@ -57,7 +57,7 @@ h2::selection {
 
 .toggle-icons > img {
   transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-  width: 30px;
+  width: 20px;
 }
 
 .moon {
@@ -78,7 +78,7 @@ h2::selection {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 8rem;
+  margin-top: 6rem;
   padding: 1rem;
 }
 
@@ -92,9 +92,14 @@ h2::selection {
 }
 
 .content-text h2 {
-  font-size: 3rem;
+  
   line-height: 1.2;
   transition: 0.2s ease-in-out;
+  margin: 1rem 0;
+}
+
+.content-text h1{
+  font-size: 2rem;
 }
 
 .content-text p {
@@ -136,32 +141,32 @@ h2::selection {
 
 /* project 1 */
 .card:nth-child(1) {
-  background: url(../assets/project/project-one.png) center center/cover;
+  background: url(../assets/project/ig3.png) center center/cover;
 }
 
 /* Project 2 */
 .card:nth-child(2) {
-  background: url(../assets/project/project-two.png) center center/cover;
+  background: url(../assets/project/ig2.png) center center/cover;
 }
 
 /* Project 3 */
 .card:nth-child(3) {
-  background: url(../assets/project/project-three.png) center center/cover;
+  background: url(../assets/project/ig4.png) center center/cover;
 }
 
 /* Project 4 */
 .card:nth-child(4) {
-  background: url(../assets/project/project-four.png) center center/cover;
+  background: url(../assets/project/ig5.png) center center/cover;
 }
 
 /* Project 5 */
 .card:nth-child(5) {
-  background: url(../assets/project/project-five.png) center center/cover;
+  background: url(../assets/project/ig7.png) center center/cover;
 }
 
 /* Project 6 */
 .card:nth-child(6) {
-  background: url(../assets/project/project-six.png) center center/cover;
+  background: url(../assets/project/ig6.png) center center/cover;
 }
 
 /* Media Queries */
